...

    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_signup">SignupActivity</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="entrar_button">Entrar</string>

    <string name="main_page">Main Page</string>
    <string name="enter_your_url">http://[ENTER-YOUR-URL-HERE]</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
...
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="add_item">Add New Item</string>
    <string name="action_logout">Logout</string>
    <string name="users">users</string>
    <string name="creating_account">Creating Account...</string>
    <string name="update_button">Atualizar</string>

    <!-- Register Layout -->
    <string name="register">Registrar</string>
    <string name="first_name">Primeiro Nome</string>
    <string name="last_name">Sobrenome</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="sign_up">CRIAR CONTA</string>
    <string name="has_account">Já possui uma conta? Faça login.</string>
    <string name="university">Universidade</string>
    <string name="lowercase_university">university</string>
    <string name="hasnot_account">Não possui uma conta? Registre-se!</string>
    <string name="register_fail">Registro falhou</string>
    <string name="four_characters">pelo menos 4 caracteres</string>
...

    <!-- New Review Layout -->
    <string name="add_comment">Insira seu comentário</string>
    <string name="create_review">Avaliar</string>

    <!-- Edit Restaurant -->
    <string name="edit_info_button">Editar Informações</string>
    <string name="rest_name">Nome</string>
    <string name="rest_local">Localização</string>
    <string name="rest_univ">Univerdidade</string>
    <string name="updateDialog">Atualizando...</string>
    <string name="reviewDialog">Avaliando...</string>
    <string name="addProductDialog">Adicionando produto...</string>
...
