<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/update_user_info"
        android:orderInCategory="100"
        android:title="Editar Informações"
        app:showAsAction="never"/>

    <item
        android:id="@+id/user_sign_off"
        android:orderInCategory="100"
        android:title="Sair"
        app:showAsAction="never"/>

</menu>