...
                android:layout_alignParentRight="true"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_action_overflow" />-->

            <TextView
                android:id="@+id/rest_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"
                android:text="Estabelecimento"
                android:textColor="#fff"
...
                android:background="#fff"

                android:padding="15dp"
                android:text="Campus, Universidade" />

            <TextView
                android:id="@+id/rest_profile_local"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="#fff"
...
